<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.SplashActivity">

    <ImageView
        android:id="@+id/SplashIVBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@mipmap/splash"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/SplashIVSofra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:src="@mipmap/logo"
        app:layout_constraintBottom_toTopOf="@+id/SplashTVFirstApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/SplashIVBackground" />

    <TextView
        android:id="@+id/SplashTVFirstApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="45dp"
        android:layout_marginStart="45dp"
        android:textSize="18sp"
        android:text="@string/splashText1"
        android:textAlignment="center"
        android:fontFamily="casual"
        android:textColor="#FAFAFA"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/SplashBTOrder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/SplashBTOrder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:text="@string/splashButtonOrder"
        android:textAllCaps="false"
        android:textColor="@color/colorBlack"
        android:textSize="15sp"
        android:textStyle="bold"
        android:theme="@style/MyButton1"
        app:layout_constraintBottom_toTopOf="@+id/SplashBTSell"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/SplashBTSell"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:text="@string/splashButtonSell"
        android:textAllCaps="false"
        android:textColor="@color/colorBlack"
        android:textSize="15sp"
        android:textStyle="bold"
        android:theme="@style/MyButton1"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutSites"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayoutSites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"

        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageViewFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="16dp"
            android:src="@mipmap/instgram"
            app:civ_border_color="#FAFAFA"
            app:civ_border_width="0dp"

            app:layout_constraintHorizontal_bias="0.416"
            app:layout_constraintStart_toStartOf="parent" />
        <!-- Twitter image-->
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageViewTwiter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:src="@mipmap/twiter"
            app:civ_border_color="#FAFAFA"
            app:civ_border_width="0dp"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageViewFacebook"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/splashText2"
        android:textColor="#FAFAFA"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/SplashIVBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>